--- a/11-Arrays-Bankist/starter/style.css
+++ b/11-Arrays-Bankist/starter/style.css
@@ -135,6 +135,14 @@ nav {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #eee;
+  text-decoration: none;
+}
+
+a.fill-div {
+  display: block;
+  height: 100%;
+  width: 100%;
+  text-decoration: none;
 }
 
 .movements__type {
